==> alireza-ansaripour/UWB-concurrent/platform/port.c <==
#include "sleep.h"
#include "port.h"
#include "stm32l4xx_hal.h"
#include "stm32_hal_legacy.h"
#include "stm32l4xx_hal_conf.h"
#include "stm32l4xx_hal_rcc.h"
#include "stm32l4xx_hal_rcc_ex.h"
#define rcc_init(x)					RCC_Configuration(x)
#define systick_init(x)				SysTick_Configuration(x)
#define interrupt_init(x)			NVIC_Configuration(x)
#define usart_init(x)				USART_Configuration(x)
#define spi_init(x)					SPI_Configuration(x)
#define gpio_init(x)				GPIO_Configuration(x)
#define usb_init(x)					USB_Configuration(x)

int NVIC_Configuration(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;
//	EXTI_InitTypeDef EXTI_InitStructure;

	// Enable GPIO used as DECA IRQ for interrupt
	GPIO_InitStructure.Pin = DECAIRQ;
	GPIO_InitStructure.Mode = GPIO_MODE_IT_RISING;
	GPIO_InitStructure.Pull = GPIO_PULLDOWN; //IRQ pin should be Pull Down to prevent unnecessary EXT IRQ while DW1000 goes to sleep mode
	HAL_GPIO_Init(DECAIRQ_GPIO, &GPIO_InitStructure);
//	/* Connect EXTI Line to GPIO Pin */
//	GPIO_EXTILineConfig(DECAIRQ_EXTI_PORT, DECAIRQ_EXTI_PIN);
//
//	/* Configure EXTI line */
//	EXTI_InitStructure.EXTI_Line = DECAIRQ_EXTI;
//	EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
//	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising;	//MPW3 IRQ polarity is high by default
//	EXTI_InitStructure.EXTI_LineCmd = DECAIRQ_EXTI_USEIRQ;
//	EXTI_Init(&EXTI_InitStructure);

	/* Set NVIC Grouping to 16 groups of interrupt without sub-grouping */
	HAL_NVIC_SetPriorityGrouping(NVIC_PRIORITYGROUP_4);

	/* Enable and set EXTI Interrupt to the lowest priority */
//	HAL_NVIC_SetPriority(DECAIRQ_EXTI_IRQn, 15, 0);
//	HAL_NVIC_EnableIRQ(DECAIRQ_EXTI_IRQn);

	/* NVIC for DECAWAVE */
	HAL_NVIC_SetPriority(DECAIRQ_EXTI_IRQn, 0, 15);
	HAL_NVIC_EnableIRQ(DECAIRQ_EXTI_IRQn);

	/* NVIC for USART */
	HAL_NVIC_SetPriority(USARTx_IRQn, 0, 15);
	HAL_NVIC_EnableIRQ(USARTx_IRQn);

	/* NVIC configuration for DMA transfer complete interrupt (USARTx_TX) */
	HAL_NVIC_SetPriority(USARTx_TX_DMA_IRQn, 0, 1);
	HAL_NVIC_EnableIRQ(USARTx_TX_DMA_IRQn);

	/* NVIC configuration for DMA transfer complete interrupt (USARTx_RX) */
	HAL_NVIC_SetPriority(USARTx_RX_DMA_IRQn, 0, 2);
	HAL_NVIC_EnableIRQ(USARTx_RX_DMA_IRQn);

	/* Set Interrupt Group Priority */
	HAL_NVIC_SetPriority(TIMx_IRQn, 2, 0);

	/* Enable the TIMx global Interrupt */
	HAL_NVIC_EnableIRQ(TIMx_IRQn);

	return 0;
}

int RCC_Configuration(void)
{
	RCC_ClkInitTypeDef RCC_ClkInitStruct = {0};
	RCC_OscInitTypeDef RCC_OscInitStruct = {0};
	RCC_PeriphCLKInitTypeDef PeriphClkInitStruct = {0};

	__HAL_FLASH_SET_LATENCY(FLASH_LATENCY_4);
	HAL_RCC_DeInit();

	/* HSE is enabled after System reset, activate PLL with HSE as source */
	RCC_OscInitStruct.OscillatorType = RCC_OSCILLATORTYPE_HSE;
	RCC_OscInitStruct.HSEState = RCC_HSE_ON;	// 24 MHz
	RCC_OscInitStruct.PLL.PLLState = RCC_PLL_ON;
	RCC_OscInitStruct.PLL.PLLSource = RCC_PLLSOURCE_HSE;
	RCC_OscInitStruct.PLL.PLLM = 1; // 24 / 1 = 24 MHz
	RCC_OscInitStruct.PLL.PLLN = 10; // 24 * 10 = 240 MHz
//	RCC_OscInitStruct.PLL.PLLR = 3; // 240 / 3 = 80 MHz
	RCC_OscInitStruct.PLL.PLLR = 4; // 240 / 4 = 60 MHz
	RCC_OscInitStruct.PLL.PLLP = 10; // 240 / 10 = 24 MHz
	RCC_OscInitStruct.PLL.PLLQ = 5; // 240 / 5 = 48 MHz
	if(HAL_RCC_OscConfig(&RCC_OscInitStruct) != HAL_OK)
	{
		/* Initialization Error */
		Error_Handler();
	}

//	/*Select PLL 48 MHz output as USB clock source */
//	PeriphClkInitStruct.PeriphClockSelection = RCC_PERIPHCLK_USB;
//	PeriphClkInitStruct.UsbClockSelection = RCC_USBCLKSOURCE_PLLCLK;
//	HAL_RCCEx_PeriphCLKConfig(&PeriphClkInitStruct);

	/*Select PLLQ output as RNG clock source */
	PeriphClkInitStruct.PeriphClockSelection = RCC_PERIPHCLK_RNG;
	PeriphClkInitStruct.RngClockSelection = RCC_RNGCLKSOURCE_PLL;
	HAL_RCCEx_PeriphCLKConfig(&PeriphClkInitStruct);

	/* Select PLL as system clock source and configure the HCLK, PCLK1 and PCLK2
	 clocks dividers */
	RCC_ClkInitStruct.ClockType = (RCC_CLOCKTYPE_SYSCLK | RCC_CLOCKTYPE_HCLK | RCC_CLOCKTYPE_PCLK1 | RCC_CLOCKTYPE_PCLK2);
//	RCC_ClkInitStruct.SYSCLKSource = RCC_SYSCLKSOURCE_HSE;
	RCC_ClkInitStruct.SYSCLKSource = RCC_SYSCLKSOURCE_PLLCLK;
	RCC_ClkInitStruct.AHBCLKDivider = RCC_SYSCLK_DIV1;
	RCC_ClkInitStruct.APB1CLKDivider = RCC_HCLK_DIV1;
	RCC_ClkInitStruct.APB2CLKDivider = RCC_HCLK_DIV1;
	if(HAL_RCC_ClockConfig(&RCC_ClkInitStruct, FLASH_LATENCY_4) != HAL_OK)
	{
		/* Initialization Error */
		Error_Handler();
	}

	__HAL_RCC_SYSCFG_CLK_ENABLE();
	__HAL_RCC_FLASH_CLK_ENABLE();

	/* Enable SPI2 clock */
	__HAL_RCC_SPI2_CLK_ENABLE();

	/* Enable GPIOs clocks */
	__HAL_RCC_GPIOA_CLK_ENABLE();
	__HAL_RCC_GPIOB_CLK_ENABLE();

	/* Enable Power Clock */
	__HAL_RCC_PWR_CLK_ENABLE();

	/* Enable USART Clock */
	USARTx_CLK_ENABLE();

	/* Enable DMA clock */
	USARTx_TX_DMA_CLK_ENABLE();
//	USARTx_RX_DMA_CLK_ENABLE();

//	/* Enable USB power on Pwrctrl CR2 register */
//	HAL_PWREx_EnableVddUSB();

	/* Enable TIM peripherals Clock */
	TIMx_CLK_ENABLE();

	/* Enable RNG controller clock */
	__HAL_RCC_RNG_CLK_ENABLE();

	return 0;
}

int SPI_Configuration(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	HAL_SPI_DeInit(&SPIx_Handle);

	// SPIx Mode setup
	SPIx_Handle.Instance = SPIx;
	SPIx_Handle.Init.Direction = SPI_DIRECTION_2LINES;
	SPIx_Handle.Init.Mode = SPI_MODE_MASTER;
	SPIx_Handle.Init.DataSize = SPI_DATASIZE_8BIT;
	SPIx_Handle.Init.CLKPolarity = SPI_POLARITY_LOW;
	SPIx_Handle.Init.CLKPhase = SPI_PHASE_1EDGE;
	SPIx_Handle.Init.NSS = SPI_NSS_SOFT;
	SPIx_Handle.Init.BaudRatePrescaler = SPIx_PRESCALER;
	SPIx_Handle.Init.FirstBit = SPI_FIRSTBIT_MSB;
	SPIx_Handle.Init.CRCPolynomial = 7;
	SPIx_Handle.Init.CRCLength = SPI_CRC_LENGTH_8BIT;
	SPIx_Handle.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
	SPIx_Handle.Init.NSSPMode = SPI_NSS_PULSE_DISABLE;
	SPIx_Handle.Init.TIMode = SPI_TIMODE_DISABLE;

	HAL_SPI_Init(&SPIx_Handle);

	// SPIx SCK pin setup
	GPIO_InitStructure.Pin = SPIx_SCK;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Alternate = SPIx_SCK_AF;

	HAL_GPIO_Init(SPIx_GPIO, &GPIO_InitStructure);

	// SPIx MOSI pin setup
	GPIO_InitStructure.Pin = SPIx_MOSI;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Alternate = SPIx_MOSI_AF;

	HAL_GPIO_Init(SPIx_GPIO, &GPIO_InitStructure);

	// SPIx MISO pin setup
	GPIO_InitStructure.Pin = SPIx_MISO;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Alternate = SPIx_MISO_AF;

	HAL_GPIO_Init(SPIx_GPIO, &GPIO_InitStructure);

	// SPIx CS pin setup
	GPIO_InitStructure.Pin = SPIx_CS;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStructure.Pull = GPIO_NOPULL;

	HAL_GPIO_Init(SPIx_CS_GPIO, &GPIO_InitStructure);
//
//	// Disable SPIx SS Output
//	SPI_SSOutputCmd(SPIx, DISABLE);
//
//	// Enable SPIx
//	SPI_Cmd(SPIx, ENABLE);
//
//	// Set CS high
//	GPIO_SetBits(SPIx_CS_GPIO, SPIx_CS);

	__HAL_SPI_ENABLE(&SPIx_Handle);

    return 0;
}

void reset_DW1000(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	// Enable GPIO used for DW1000 reset
	GPIO_InitStructure.Pin = DW1000_RSTn;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	HAL_GPIO_Init(DW1000_RSTn_GPIO, &GPIO_InitStructure);

	//drive the RSTn pin low
	HAL_GPIO_WritePin(DW1000_RSTn_GPIO, DW1000_RSTn, GPIO_PIN_RESET);

	//put the pin back to tri-state ... as input
	GPIO_InitStructure.Pin = DW1000_RSTn;
	GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	HAL_GPIO_Init(DW1000_RSTn_GPIO, &GPIO_InitStructure);

    sleep_ms(2);
}
